src/test/ui/issues/issue-12997-2.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-12997-2.rs:8:1
   |
LL | fn bar(x: isize) { }
   | ^^^^^^^^^^^^^^^^^^^^ expected `isize`, found `&mut Bencher`
   |
note: function defined here
  --> $DIR/issue-12997-2.rs:8:4
   |
LL | fn bar(x: isize) { }
   |    ^^^ --------
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide an argument of the correct type
   |
LL | bar({isize})
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
